Mon May 13 07:13:57 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
        * bin/diff-builds-and-group-fixed-tests-only.sh:
        * docs/Download.html:
        * docs/bczar/bczar.html:
        * etc/index.html:
          Make 6.1.9 public and prepare for the next minor release

Mon May 13 08:52:11 CEST 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE version 6.1.9 released.

Fri May 10 20:36:13 UTC 2013  Steve Huston  <shuston@riverace.com>

        * examples/C++NPv2/AIO_Client_Logging_Daemon.cpp: Advance the
          iterator while freeing items in close() to avoid an infinite
          loop. Thanks to George Chen for finding this problem.

        * tests/Unbounded_Set_Test.cpp: Added a allocate/iterate/free cycle
          similar to the one above to catch this type of thing if it pops
          up again.

        * THANKS: Added George Chen.

Fri May 10 08:59:43 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Compiler_Features_17_Test.cpp:
          Added another C++11 test case

Thu May  9 17:14:47 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * tests/Thread_Manager_Test.cpp (worker): Fixed %s to %C to work
          properly with ACE_DEBUG.  Thanks to Johnny for reporting this.

Thu May  9 14:05:28 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * tests/Thread_Manager_Test.cpp (worker): Removed unused "len"
          variable to fix a warning.  Thanks to Johnny for reporting this.

Wed May  8 19:04:22 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/OS_NS_Thread.inl (ACE_OS::thr_id): Fixed a warning on
          Windows.  Thanks to Johnny for reporting this.

Wed May  8 13:52:54 UTC 2013  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/OS_NS_Thread.inl (ACE_OS::thr_id): Replaced the call to
          ACE_Thread::self() with ACE_OS::thr_self().  Thanks to Johnny
          Willemsen for reporting this.
