@@ -221,8 +221,8 @@ int run_main (int, ACE_TCHAR *[])
     if (0 != ACE_OS::strcmp (addr.get_host_addr(), primary_dotted_decimal))
       {
         ACE_ERROR ((LM_ERROR,
-                    ACE_TEXT ("%s failed get_host_addr() check\n")
-                    ACE_TEXT ("%s != %s\n"),
+                    ACE_TEXT ("%C failed get_host_addr() check\n")
+                    ACE_TEXT ("%C != %C\n"),
                     primary_dotted_decimal,
                     addr.get_host_addr (),
                     primary_dotted_decimal));
@@ -406,8 +406,8 @@ int run_main (int, ACE_TCHAR *[])
     if (0 != ACE_OS::strcmp (addr.get_host_addr(), primary_dotted_decimal))
       {
         ACE_ERROR ((LM_ERROR,
-                    ACE_TEXT ("%s failed second get_ip_address() check\n")
-                    ACE_TEXT ("%s != %s\n"),
+                    ACE_TEXT ("%C failed second get_ip_address() check\n")
+                    ACE_TEXT ("%C != %C\n"),
                     primary_dotted_decimal,
                     addr.get_host_addr (),
                     primary_dotted_decimal));
